- Dropdown context menu is now rendered in the document body to ensure that small wrappers can still make it visible - Dropdowns for nested grids are now correctly propagated

--- a/src/themes/doby-grid-dark.less
+++ b/src/themes/doby-grid-dark.less
@@ -106,6 +106,8 @@
 
 
 .doby-grid-dropdown {
+	font-size: 12px;
+
 	.doby-grid-dropdown-menu {
 		background: #000;
 		border: 1px solid;
