--- a/src/themes/doby-grid-light.less
+++ b/src/themes/doby-grid-light.less
@@ -103,6 +103,8 @@
 
 
 .doby-grid-dropdown {
+	font-size: 12px;
+
 	.doby-grid-dropdown-menu {
 		background: #F9F9F9;
 		border: 1px solid;
